Fixed img overflow issue on iPhone.

--- a/_css/_blog.scss
+++ b/_css/_blog.scss
@@ -161,11 +161,12 @@
 	}
 	> .post-content {
 		img {
-			margin: 15px;
+			margin-top: $content-margin;
+			margin-bottom: $content-margin;
 		}
 		> .featured {
 			text-align: center;
-			margin-bottom: 15px;
+			margin-bottom: $content-margin;
 			img {
 				max-height: 500px;
 				width: auto;
@@ -178,7 +179,7 @@
 		#holiday-caption {
 			@include floatAndClearLeft;
 			max-width: 200px;
-			margin-left: 15px;
+			margin-left: $content-margin;
 		}
 		#half-marathon-caption {
 			@include floatAndClearLeft;	
